--- a/package.json
+++ b/package.json
@@ -49,12 +49,11 @@
     "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.2",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
+    "sonner": "^2.0.7",    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "wouter": "^3.3.5",
-    "zod": "^4.1.12"  },
+    "wouter": "3.7.1",
+    "zod": "^4.1.12"},
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
@@ -64,12 +63,6 @@
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",    "tailwindcss": "^4.1.14",
-    "typescript": "5.6.3",
-    "vite": "^7.1.7"
-  },
-  "pnpm": {
-    "patchedDependencies": {
-      "wouter@3.7.1": "patches/wouter@3.7.1.patch"
-    }
+    "typescript": "5.6.3",    "vite": "^7.1.7"
   }
 }
